--- a/src/app/components/dashBoardComponent/dashboard.template.html
+++ b/src/app/components/dashBoardComponent/dashboard.template.html
@@ -43,12 +43,14 @@
                 <div fxLayout="column wrap" fxLayoutGap="15px" fxLayoutAlign="center end" [fxShow]="true" [fxHide]="false">
                   <div fxLayout="column wrap" fxLayoutGap="12px" fxLayoutAlign="start stretch" [fxShow]="true" [fxHide]="false">
                     <div class="side-nav-text dark-color-grey">
-                      All</div>
-                    <div class="active dark-color-grey">
+                      <span class="cursor" routerLink="/dashboard/draft" routerLinkActive="active">All</span>
+                    </div>
+                    <div class="side-nav-text dark-color-grey">
                       <span class="cursor" routerLink="/dashboard/draft" routerLinkActive="active">Draft</span>
                     </div>
                     <div class="side-nav-text dark-color-grey">
-                      Submitted</div>
+                      <span class="cursor" routerLink="/dashboard/draft" routerLinkActive="active">Submitted</span>
+                    </div>
                   </div>
                 </div>
               </div>
