--- a/src/app/components/dashBoardComponent/dashboard.template.html
+++ b/src/app/components/dashBoardComponent/dashboard.template.html
@@ -27,6 +27,8 @@
         <div fxLayout="row wrap" fxLayoutAlign="center center" [fxShow]="true" [fxHide]="false">
           <div fxLayout="column wrap" fxFlex="80" fxLayoutGap="32px" fxLayoutAlign="start stretch" [fxShow]="true" [fxHide]="false">
             <div fxLayout="column wrap" fxLayoutGap="10px" fxLayoutAlign="start center" [fxShow]="true" [fxHide]="false"><img imgSrc="Web/Icons/manisuresh.png" class="sideNavImg">
+              <div>
+                Promise</div>
               <div class="sideNavUsername">
                 Manisuresh</div>
             </div>
@@ -43,13 +45,13 @@
                 <div fxLayout="column wrap" fxLayoutGap="15px" fxLayoutAlign="center end" [fxShow]="true" [fxHide]="false">
                   <div fxLayout="column wrap" fxLayoutGap="12px" fxLayoutAlign="start stretch" [fxShow]="true" [fxHide]="false">
                     <div class="side-nav-text dark-color-grey">
-                      <span class="cursor" routerLink="/dashboard/draft" routerLinkActive="active">All</span>
+                      <span class="cursor" routerLink="/dashboard/abhijith" routerLinkActive="active">All</span>
                     </div>
                     <div class="side-nav-text dark-color-grey">
                       <span class="cursor" routerLink="/dashboard/draft" routerLinkActive="active">Draft</span>
                     </div>
                     <div class="side-nav-text dark-color-grey">
-                      <span class="cursor" routerLink="/dashboard/draft" routerLinkActive="active">Submitted</span>
+                      <span class="cursor" routerLink="/dashboard/service" routerLinkActive="active">Submitted</span>
                     </div>
                   </div>
                 </div>
